--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,16 +52,16 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1"
 
     //retrofit
-    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.10'
 
     //dependency injection
     def koin_version = "3.1.2"
-    implementation "io.insert-koin:koin-android:$koin_version"
-//        implementation "io.insert-koin:koin-androidx-viewmodel:$koin_version"
-    implementation "io.insert-koin:koin-core:3.1.2"
+//    implementation "io.insert-koin:koin-android:$koin_version"
+////        implementation "io.insert-koin:koin-androidx-viewmodel:$koin_version"
+//    implementation "io.insert-koin:koin-core:3.1.2"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
